--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Publish to GitHub Packages Apache Maven
         run: mvn clean deploy -X
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GITHUB_TOKEN is the default env for the password
+          GITHUB_TOKEN: ${{ secrets.REPO_TOKEN }} 
