--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <repository>
             <id>github</id>
             <name>GitHub OWNER Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/org/maven-packages</url>
+            <url>https://maven.pkg.github.com/mahabaleshwar/foo-bar-demo</url>
         </repository>
     </distributionManagement>
 	<build>
